--- a/client.html
+++ b/client.html
@@ -7,9 +7,83 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+      body { padding-top: 10px; }
+      .tab-content { padding-top: 10px; }
+      a { cursor: pointer; }
+    </style>
   </head>
   <body>
     <div class="navbar navbar-fixed-bottom">
+      <div class="container">
+        <a id="toggle" class="btn btn-primary navbar-btn">
+          <i class="icon-play"></i>
+          <i class="icon-pause hidden"></i>
+        </a>
+
+        <a class="btn btn-default navbar-btn btn-small">
+          <i class="icon-step-forward"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="container">
+      <ul class="nav nav-pills">
+        <li class="active"><a data-toggle="pill" data-target="#playlist">
+          <i class="icon-list"></i> Playlist
+        </a></li>
+
+        <li><a data-toggle="pill" data-target="#library">
+          <i class="icon-book"></i> Library
+        </a></li>
+
+        <li class="pull-right dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <i class="icon-cogs"></i>
+          </a>
+
+          <ul class="dropdown-menu">
+            <li><a data-toggle="pill" data-target="#settings">
+              <i class="icon-fixed-width icon-cog"></i> Settings
+            </a></li>
+
+            <li><a data-toggle="pill" data-target="#help">
+              <i class="icon-fixed-width icon-question-sign"></i> Help
+            </a></li>
+
+            <li><a data-toggle="pill" data-target="#about">
+              <i class="icon-fixed-width icon-info-sign"></i> About
+            </a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="playlist" class="tab-pane active">
+        </div>
+
+        <div id="library" class="tab-pane">
+        </div>
+
+        <div id="settings" class="tab-pane">
+        </div>
+
+        <div id="help" class="tab-pane">
+        </div>
+
+        <div id="about" class="tab-pane">
+          <div class="jumbotron text-center">
+            <h1>Avery</h1>
+            <p>0.1.0</p>
+            <p>
+              <a class="btn btn-primary btn-small" href="https://github.com/programble/avery" target="_blank">
+                <i class="icon-github"></i> Source
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
