Receive a visit from the magical unicorn settings fairy

--- a/client.html
+++ b/client.html
@@ -67,6 +67,25 @@
         </div>
 
         <div id="settings" class="tab-pane">
+          <form class="form-horizontal">
+            <fieldset>
+              <legend>Connection</legend>
+
+              <div class="form-group">
+                <label class="col-lg-2 control-label" for="mpdHost">MPD Host</label>
+                <div class="col-lg-3">
+                  <input id="mpdHost" type="text" class="setting form-control">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-lg-2 control-label" for="mpdPort">MPD Port</label>
+                <div class="col-lg-3">
+                  <input id="mpdPort" type="text" class="setting form-control">
+                </div>
+              </div>
+            </fieldset>
+          </form>
         </div>
 
         <div id="help" class="tab-pane">
