--- a/client.html
+++ b/client.html
@@ -96,7 +96,9 @@
             <h1>Avery</h1>
             <p>0.1.0</p>
             <p>
-              <a class="btn btn-primary btn-small" href="https://github.com/programble/avery" target="_blank">
+            <a class="btn btn-primary btn-small"
+               href="https://github.com/programble/avery"
+               target="_blank">
                 <i class="icon-github"></i> Source
               </a>
             </p>
