Pad body for fixed bottom bar

--- a/client.html
+++ b/client.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
-      body { padding-top: 10px; }
+      body { padding: 10px 0 70px; }
       .tab-content { padding-top: 10px; }
       a { cursor: pointer; }
     </style>
