--- a/client.html
+++ b/client.html
@@ -60,13 +60,13 @@
       </ul>
 
       <div class="tab-content">
-        <div id="playlist" class="tab-pane active">
+        <div id="playlist" class="tab-pane active fade in">
         </div>
 
-        <div id="library" class="tab-pane">
+        <div id="library" class="tab-pane fade">
         </div>
 
-        <div id="settings" class="tab-pane">
+        <div id="settings" class="tab-pane fade">
           <form class="form-horizontal">
             <fieldset>
               <legend>Connection</legend>
@@ -88,10 +88,10 @@
           </form>
         </div>
 
-        <div id="help" class="tab-pane">
+        <div id="help" class="tab-pane fade">
         </div>
 
-        <div id="about" class="tab-pane">
+        <div id="about" class="tab-pane fade">
           <div class="jumbotron text-center">
             <h1>Avery</h1>
             <p>0.1.0</p>
