--- a/client.html
+++ b/client.html
@@ -84,6 +84,14 @@
                   <input id="mpdPort" type="text" class="setting form-control">
                 </div>
               </div>
+
+              <div class="form-group">
+                <div class="col-offset-2 col-lg-3">
+                  <a id="reconnect" class="btn btn-default">
+                    <i class="icon-refresh"></i> Reconnect
+                  </a>
+                </div>
+              </div>
             </fieldset>
           </form>
         </div>
