--- a/client.html
+++ b/client.html
@@ -44,7 +44,7 @@
           </a>
 
           <ul class="dropdown-menu">
-            <li><a data-toggle="pill" data-target="#settings">
+            <li><a id="settings-tab" data-toggle="pill" data-target="#settings">
               <i class="icon-fixed-width icon-cog"></i> Settings
             </a></li>
 
@@ -86,10 +86,13 @@
               </div>
 
               <div class="form-group">
-                <div class="col-offset-2 col-lg-3">
-                  <a id="reconnect" class="btn btn-default">
+                <div class="col-offset-2 col-lg-10">
+                  <a id="reconnect" class="btn btn-success">
                     <i class="icon-refresh"></i> Reconnect
                   </a>
+                  <span class="text-danger">
+                    <strong id="reconnect-error"></strong>
+                  </span>
                 </div>
               </div>
             </fieldset>
