--- a/client.html
+++ b/client.html
@@ -69,17 +69,17 @@
         <div id="settings" class="tab-pane fade">
           <form class="form-horizontal">
             <fieldset>
-              <legend>Connection</legend>
+              <legend>Music Player Daemon</legend>
 
               <div class="form-group">
-                <label class="col-lg-2 control-label" for="mpdHost">MPD Host</label>
+                <label class="col-lg-2 control-label" for="mpdHost">Host</label>
                 <div class="col-lg-3">
                   <input id="mpdHost" type="text" class="setting form-control">
                 </div>
               </div>
 
               <div class="form-group">
-                <label class="col-lg-2 control-label" for="mpdPort">MPD Port</label>
+                <label class="col-lg-2 control-label" for="mpdPort">Port</label>
                 <div class="col-lg-3">
                   <input id="mpdPort" type="text" class="setting form-control">
                 </div>
