Keep width of toggle button constant

--- a/client.html
+++ b/client.html
@@ -12,12 +12,13 @@
       body { padding: 10px 0 70px; }
       .tab-content { padding-top: 10px; }
       a { cursor: pointer; }
+      #toggle { width: 42px; }
     </style>
   </head>
   <body>
     <div class="navbar navbar-fixed-bottom">
       <div class="container">
-        <a id="toggle" class="btn btn-primary navbar-btn">
+        <a id="toggle" class="btn btn-primary navbar-btn text-center">
           <i class="icon-play"></i>
           <i class="icon-pause hidden"></i>
         </a>
