Remove useless text-center class on toggle button

--- a/client.html
+++ b/client.html
@@ -18,7 +18,7 @@
   <body>
     <div class="navbar navbar-fixed-bottom">
       <div class="container">
-        <a id="toggle" class="btn btn-primary navbar-btn text-center">
+        <a id="toggle" class="btn btn-primary navbar-btn">
           <i class="icon-play"></i>
           <i class="icon-pause hidden"></i>
         </a>
