Clean up and disable UI when not connected

--- a/client.html
+++ b/client.html
@@ -10,8 +10,8 @@
 
     <style>
       body { padding: 10px 0 70px; }
-      .tab-content { padding-top: 10px; }
       a { cursor: pointer; }
+      .tab-content { padding-top: 10px; }
       #toggle { width: 42px; }
     </style>
   </head>
@@ -75,20 +75,20 @@
               <div class="form-group">
                 <label class="col-lg-2 control-label" for="mpdHost">Host</label>
                 <div class="col-lg-3">
-                  <input id="mpdHost" type="text" class="setting form-control">
+                  <input id="mpdHost" type="text" class="setting form-control" disabled>
                 </div>
               </div>
 
               <div class="form-group">
                 <label class="col-lg-2 control-label" for="mpdPort">Port</label>
                 <div class="col-lg-3">
-                  <input id="mpdPort" type="text" class="setting form-control">
+                  <input id="mpdPort" type="text" class="setting form-control" disabled>
                 </div>
               </div>
 
               <div class="form-group">
                 <div class="col-offset-2 col-lg-10">
-                  <a id="reconnect" class="btn btn-success">
+                  <a id="reconnect" class="btn btn-success disabled">
                     <i class="icon-refresh"></i> Reconnect
                   </a>
                   <span class="text-danger">
