--- a/client.html
+++ b/client.html
@@ -33,6 +33,7 @@
       <ul class="nav nav-pills">
         <li class="active"><a data-toggle="pill" data-target="#playlist">
           <i class="icon-list"></i> Playlist
+          <span id="playlist-length" class="badge"></span>
         </a></li>
 
         <li><a data-toggle="pill" data-target="#library">
