Only show playback bar during playback

--- a/client.html
+++ b/client.html
@@ -16,16 +16,8 @@
     </style>
   </head>
   <body>
-    <div class="navbar navbar-fixed-bottom">
+    <div id="playback-bar" class="navbar navbar-fixed-bottom fade">
       <div class="container">
-        <a id="toggle" class="btn btn-primary navbar-btn">
-          <i class="icon-play"></i>
-          <i class="icon-pause hidden"></i>
-        </a>
-
-        <a class="btn btn-default navbar-btn btn-small">
-          <i class="icon-step-forward"></i>
-        </a>
       </div>
     </div>
 
