Add title and artist to playback bar

--- a/client.html
+++ b/client.html
@@ -24,6 +24,13 @@
               <i class="icon-pause"></i>
             </a>
           </div>
+          <div class="col-lg-11">
+            <p class="navbar-text">
+              <strong id="playback-title"></strong>
+              —
+              <span id="playback-artist"></span>
+            </p>
+          </div>
         </div>
       </div>
     </div>
