--- a/client.html
+++ b/client.html
@@ -19,7 +19,7 @@
     <div id="playback-bar" class="navbar navbar-fixed-bottom navbar-inverse fade">
       <div class="container">
         <div class="row">
-          <div class="col-lg-1">
+          <div class="col-lg-1 text-center">
             <a id="pause" class="btn btn-primary navbar-btn">
               <i class="icon-pause"></i>
             </a>
