--- a/client/ui.html
+++ b/client/ui.html
@@ -129,6 +129,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js"></script>
+    <script src="/js/jquery"></script>
+    <script src="/js/mpd"></script>
+    <script src="/js/ui"></script>
   </body>
 </html>
