--- a/client/ui.html
+++ b/client/ui.html
@@ -130,7 +130,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery"></script>
-    <script src="/js/mpd"></script>
+    <script src="/js/server"></script>
     <script src="/js/ui"></script>
   </body>
 </html>
