Show elapsed/total time in playback bar

--- a/client/ui.html
+++ b/client/ui.html
@@ -21,10 +21,17 @@
         <a id="pause" class="btn btn-primary navbar-btn">
           <i class="icon-pause"></i>
         </a>
-        <p class="navbar-text">
+
+        <p class="navbar-text pull-left">
           <strong id="playback-title"></strong>
           —
           <span id="playback-artist"></span>
+        </p>
+
+        <p class="navbar-text pull-right">
+          <span id="playback-elapsed"></span>
+          /
+          <span id="playback-total"></span>
         </p>
       </div>
     </div>
