--- a/client/ui.html
+++ b/client/ui.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
-      body { padding: 10px 0 70px; }
+      body { padding: 10px 0 70px; cursor: default; }
       a { cursor: pointer; }
       .tab-content { padding-top: 10px; }
       #pause { width: 42px; float: left; margin-right: 15px; }
