--- a/client/ui.html
+++ b/client/ui.html
@@ -12,7 +12,10 @@
       body { padding: 10px 0 70px; cursor: default; }
       a { cursor: pointer; }
       .tab-content { padding-top: 10px; }
+      .inline-all * { display: inline-block; }
+      .navbar-progress { vertical-align: middle; margin: 0; width: 200px; }
       #pause { width: 42px; float: left; margin-right: 15px; }
+      #playback-progress { transition: none; }
     </style>
   </head>
   <body>
@@ -28,11 +31,13 @@
           <span id="playback-artist"></span>
         </p>
 
-        <p class="navbar-text pull-right">
-          <span id="playback-elapsed"></span>
-          /
-          <span id="playback-total"></span>
-        </p>
+        <div class="pull-right inline-all">
+          <p id="playback-elapsed" class="navbar-text"></p>
+          <div class="progress navbar-progress">
+            <div id="playback-progress" class="progress-bar"></div>
+          </div>
+          <p id="playback-total" class="navbar-text"></p>
+        </div>
       </div>
     </div>
 
