Add option to show time remaining

--- a/client/ui.html
+++ b/client/ui.html
@@ -110,6 +110,21 @@
                 </div>
               </div>
             </fieldset>
+
+            <fieldset>
+              <legend>Interface</legend>
+
+              <div class="form-group">
+                <div class="col-offset-2 col-lg-10">
+                  <div class="checkbox">
+                    <label class="control-label">
+                      <input id="timeLeft" type="checkbox" class="setting">
+                      Show time remaining
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
           </form>
         </div>
 
