Disable timeLeft checkbox initially

--- a/client/ui.html
+++ b/client/ui.html
@@ -118,7 +118,7 @@
                 <div class="col-offset-2 col-lg-10">
                   <div class="checkbox">
                     <label class="control-label">
-                      <input id="timeLeft" type="checkbox" class="setting">
+                      <input id="timeLeft" type="checkbox" class="setting" disabled>
                       Show time remaining
                     </label>
                   </div>
