Change favicon to reflect state using FontAwesome glyphs

--- a/client/ui.html
+++ b/client/ui.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link id="favicon" rel="icon" type="image/png">
+
     <style>
       body { padding: 10px 0 70px; cursor: default; }
       a { cursor: pointer; }
@@ -151,6 +153,7 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery"></script>
+    <script src="/js/favicon"></script>
     <script src="/js/server"></script>
     <script src="/js/ui"></script>
   </body>
