--- a/client/ui.html
+++ b/client/ui.html
@@ -56,7 +56,7 @@
           </a></li>
 
           <li class="dropdown navbar-right">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <a class="dropdown-toggle" data-toggle="dropdown">
               <i class="icon-cogs"></i>
             </a>
 
