Add playlist mode buttons

--- a/client/ui.html
+++ b/client/ui.html
@@ -81,6 +81,19 @@
     <div class="container">
       <div class="tab-content">
         <div id="playlist" class="tab-pane active fade in">
+          <div class="btn-group btn-group-sm pull-right">
+            <a id="random" class="btn btn-default" title="Random">
+              <i class="icon-random"></i>
+            </a>
+
+            <a id="repeat" class="btn btn-default" title="Repeat">
+              <i class="icon-repeat"></i>
+            </a>
+
+            <a id="consume" class="btn btn-default" title="Consume">
+              <i class="icon-arrow-down"></i>
+            </a>
+          </div>
         </div>
 
         <div id="library" class="tab-pane fade">
