Link to "Github" on About pane

--- a/client/ui.html
+++ b/client/ui.html
@@ -155,10 +155,10 @@
             <h1>Avery</h1>
             <p>0.1.0</p>
             <p>
-            <a class="btn btn-primary btn-small"
-               href="https://github.com/programble/avery"
-               target="_blank">
-                <i class="icon-github"></i> Source
+              <a class="btn btn-primary btn-sm"
+                 href="https://github.com/programble/avery"
+                 target="_blank">
+                <i class="icon-github"></i> Github
               </a>
             </p>
           </div>
