--- a/client/ui.html
+++ b/client/ui.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Avery</title>
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -178,7 +178,7 @@
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/mousetrap/mousetrap.min.js"></script>
