--- a/client/ui.html
+++ b/client/ui.html
@@ -5,7 +5,7 @@
     <title>Avery</title>
 
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link id="favicon" rel="icon" type="image/png">
