--- a/client/ui.html
+++ b/client/ui.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Avery</title>
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link id="favicon" rel="icon" type="image/png">
@@ -177,12 +177,11 @@
       </div>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
-
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="/jquery/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/mousetrap/mousetrap.min.js"></script>
     <script src="/mousetrap/plugins/record/mousetrap-record.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
     <script src="/js/jquery"></script>
     <script src="/js/favicon"></script>
