--- a/client/ui.html
+++ b/client/ui.html
@@ -44,14 +44,14 @@
       </div>
     </div>
 
-    <div class="navbar navbar-fixed-top">
+    <div id="tab-bar" class="navbar navbar-fixed-top fade">
       <div class="container">
         <ul class="nav navbar-nav">
-          <li class="active"><a data-toggle="tab" data-target="#playlist">
+          <li><a id="playlist-tab" data-toggle="tab" data-target="#playlist">
             <i class="icon-list"></i> Playlist
           </a></li>
 
-          <li><a data-toggle="tab" data-target="#library">
+          <li><a id="library-tab" data-toggle="tab" data-target="#library">
             <i class="icon-book"></i> Library
           </a></li>
 
@@ -80,7 +80,11 @@
 
     <div class="container">
       <div class="tab-content">
-        <div id="playlist" class="tab-pane active fade in">
+        <div class="tab-pane active fade in text-center">
+          <i class="icon-spin icon-4x icon-refresh"></i>
+        </div>
+
+        <div id="playlist" class="tab-pane fade">
           <div class="btn-group btn-group-sm pull-right">
             <a id="random" class="btn btn-default" title="Random">
               <i class="icon-random"></i>
@@ -107,14 +111,14 @@
               <div class="form-group">
                 <label class="col-md-2 control-label" for="mpdHost">Host</label>
                 <div class="col-md-3">
-                  <input id="mpdHost" type="text" class="setting form-control" disabled>
+                  <input id="mpdHost" type="text" class="setting form-control">
                 </div>
               </div>
 
               <div class="form-group">
                 <label class="col-md-2 control-label" for="mpdPort">Port</label>
                 <div class="col-md-3">
-                  <input id="mpdPort" type="text" class="setting form-control" disabled>
+                  <input id="mpdPort" type="text" class="setting form-control">
                 </div>
               </div>
 
@@ -137,7 +141,7 @@
                 <div class="col-md-offset-2 col-md-10">
                   <div class="checkbox">
                     <label class="control-label">
-                      <input id="timeLeft" type="checkbox" class="setting" disabled>
+                      <input id="timeLeft" type="checkbox" class="setting">
                       Show time remaining
                     </label>
                   </div>
@@ -151,7 +155,7 @@
               <div class="form-group">
                 <label class="col-md-2 control-label" for="keyPause">Pause</label>
                 <div class="col-md-10">
-                  <a id="keyPause" class="btn btn-default setting disabled"></a>
+                  <a id="keyPause" class="btn btn-default setting"></a>
                 </div>
               </div>
             </fieldset>
