Add keyboard shortcuts for tabs

--- a/client/ui.html
+++ b/client/ui.html
@@ -149,7 +149,28 @@
               <legend>Keyboard Shortcuts</legend>
 
               <div class="form-group">
-                <label class="col-md-2 control-label" for="keyPause">Pause</label>
+                <label class="col-md-2 control-label">Playlist Tab</label>
+                <div class="col-md-10">
+                  <a id="keyPlaylist" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Library Tab</label>
+                <div class="col-md-10">
+                  <a id="keyLibrary" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Settings Tab</label>
+                <div class="col-md-10">
+                  <a id="keySettings" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Pause</label>
                 <div class="col-md-10">
                   <a id="keyPause" class="btn btn-default setting"></a>
                 </div>
@@ -184,5 +205,6 @@
     <script src="/js/favicon"></script>
     <script src="/js/server"></script>
     <script src="/js/ui"></script>
+    <script src="/js/keyboard"></script>
   </body>
 </html>
