Add divider between settings and about

--- a/client/ui.html
+++ b/client/ui.html
@@ -65,6 +65,8 @@
                 <i class="icon-fixed-width icon-cog"></i> Settings
               </a></li>
 
+              <li class="divider"></li>
+
               <li><a data-toggle="tab" data-target="#about">
                 <i class="icon-fixed-width icon-info-sign"></i> About
               </a></li>
