--- a/client/ui.html
+++ b/client/ui.html
@@ -171,10 +171,35 @@
                 </div>
               </div>
 
+              <hr>
+
               <div class="form-group">
                 <label class="col-md-2 control-label">Pause</label>
                 <div class="col-md-10">
                   <a id="keyPause" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <hr>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Random Mode</label>
+                <div class="col-md-10">
+                  <a id="keyRandom" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Repeat Mode</label>
+                <div class="col-md-10">
+                  <a id="keyRepeat" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Consume Mode</label>
+                <div class="col-md-10">
+                  <a id="keyConsume" class="btn btn-default setting"></a>
                 </div>
               </div>
             </fieldset>
