--- a/client/ui.html
+++ b/client/ui.html
@@ -83,7 +83,7 @@
         </div>
 
         <div id="playlist" class="tab-pane fade">
-          <div class="btn-group btn-group-sm pull-right">
+          <div class="btn-group btn-group-sm">
             <a id="random" class="btn btn-default" title="Random">
               <i class="icon-random"></i>
             </a>
@@ -94,6 +94,16 @@
 
             <a id="consume" class="btn btn-default" title="Consume">
               <i class="icon-arrow-down"></i>
+            </a>
+          </div>
+
+          <div class="pull-right">
+            <a id="shuffle" class="btn btn-default btn-sm">
+              <i class="icon-random"></i> Shuffle
+            </a>
+
+            <a id="clear" class="btn btn-danger btn-sm">
+              <i class="icon-remove"></i> Clear
             </a>
           </div>
         </div>
@@ -177,6 +187,22 @@
                 <label class="col-md-2 control-label">Pause</label>
                 <div class="col-md-10">
                   <a id="keyPause" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <hr>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Shuffle Playlist</label>
+                <div class="col-md-10">
+                  <a id="keyShuffle" class="btn btn-default setting"></a>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label class="col-md-2 control-label">Clear Playlist</label>
+                <div class="col-md-10">
+                  <a id="keyClear" class="btn btn-default setting"></a>
                 </div>
               </div>
 
