Move CSS to file

--- a/client/ui.html
+++ b/client/ui.html
@@ -6,18 +6,10 @@
 
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link id="favicon" rel="icon" type="image/png">
-
-    <style>
-      body { padding: 70px 0; cursor: default; }
-      a { cursor: pointer; }
-      .navbar-progress { float: left; margin: 15px 5px; width: 200px;}
-      .navbar-nav { width: 100%; }
-      #pause { width: 38px; margin-right: 15px; }
-      #playback-progress { transition: none; }
-    </style>
   </head>
   <body>
     <div id="playback-bar" class="navbar navbar-fixed-bottom navbar-inverse fade">
