Add rudimentary playlist table

--- a/client/ui.html
+++ b/client/ui.html
@@ -98,6 +98,19 @@
               <i class="icon-remove"></i> Clear
             </a>
           </div>
+
+          <table class="table table-hover fade">
+            <thead>
+              <tr>
+                <th>Artist</th>
+                <th>Title</th>
+                <th>Album</th>
+                <th>Time</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         </div>
 
         <div id="library" class="tab-pane fade">
