--- a/client/ui.html
+++ b/client/ui.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div id="tab-bar" class="navbar navbar-fixed-top fade">
+    <div id="tab-bar" class="navbar navbar-fixed-top navbar-default fade">
       <div class="container">
         <ul class="nav navbar-nav">
           <li><a id="playlist-tab" data-toggle="tab" data-target="#playlist">
